# dankestia

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  CONTRIBUTING.md  Makefile  README.md  apply_qstr.py  extract_translations.py  flake.nix  hardcoded_strings.txt  missing_in_quick.txt  quick_files.txt  quick_rel.txt  ref_files.txt  rename_dankestia.py  run_dev.sh  scratch_compare.py  test-toplevel.qml  test_translator.qml  ts_to_json.py
quickshell/plugin/: CMakeLists.txt
quickshell/plugin/src/Dankestia/: CMakeLists.txt  appdb.cpp  appdb.hpp  cutils.cpp  cutils.hpp  imageanalyser.cpp  imageanalyser.hpp  qalculator.cpp  qalculator.hpp  requests.cpp  requests.hpp  toaster.cpp  toaster.hpp
quickshell/plugin/src/Dankestia/Blobs/: CMakeLists.txt
quickshell/plugin/src/Dankestia/Components/: CMakeLists.txt  buttonrow.cpp  buttonrow.hpp  lazylistview.cpp  lazylistview.hpp  wavyline.cpp  wavyline.hpp
quickshell/plugin/src/Dankestia/Config/: CMakeLists.txt  anim.cpp  anim.hpp  appearanceconfig.cpp  appearanceconfig.hpp  backgroundconfig.hpp  barconfig.hpp  borderconfig.hpp  config.cpp  config.hpp  configattached.cpp  configattached.hpp  configobject.cpp  configobject.hpp  dashboardconfig.hpp  font.cpp  font.hpp  fontbuilder.cpp  fontbuilder.hpp  generalconfig.hpp  launcherconfig.hpp  lockconfig.hpp  monitorconfigmanager.cpp  monitorconfigmanager.hpp  nexusconfig.hpp  notifsconfig.hpp  osdconfig.hpp  rootconfig.cpp  rootconfig.hpp  serviceconfig.hpp  sessionconfig.hpp  sidebarconfig.hpp  tokens.cpp  tokens.hpp  tokensattached.cpp  tokensattached.hpp  userpaths.hpp  (+2 more)
(+746 files in other folders)
